@@ -5,7 +5,8 @@ Changelog
 1.0.7 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Fix error when fullname has leading spaces.
+  [jone]
 
 
 1.0.6 (2015-03-09)
